# gadget_montecarlo

./: .gitignore  CMakeLists.txt  CrossSectionArrays.hpp  EnergyDependentCS.cpp  EnergyDependentCS.hpp  EventType.cpp  EventType.hpp  GadgetUtils.cpp  GadgetUtils.hpp  LatticeFreePath.cpp  LatticeFreePath.hpp  LinkDef.h  Neutron.hpp  README.md  Vec3.hpp  parse_ENDF_json.py  parse_stochastic_ENDF_json.py  simulate.cpp  test_cross_sections.C  test_draw.C  test_enrichment_level.C
cpp_array_data/: 235u.txt  238u.txt
json_data/: 235u_cross_sections.json  235u_fission.json  238u_cross_sections.json
